--- a/sections/07.html
+++ b/sections/07.html
@@ -12,18 +12,8 @@
 
   <style>
     /* Local fonts (paths unchanged) */
-    @font-face { font-family:'HelloParisLight'; src:url('./Fonts/helloparisserif-light.ttf') format('truetype'); font-display:swap; }
-    @font-face { font-family:'Coterie';        src:url('./Fonts/coterie-regular.woff2')     format('woff2');   font-display:swap; }
-    @font-face { font-family:'SimpleSerenity'; src:url('./Fonts/Simple-Serenity-Serif.ttf') format('truetype'); font-display:swap; }
     @font-face { font-family:'Eyesome';        src:url('./Fonts/Eyesome-Regular.otf')       format('opentype'); font-display:swap; }
     @font-face { font-family:'EyesomeI';       src:url('./Fonts/Eyesome-Italic.otf')        format('opentype'); font-display:swap; }
-    @font-face { font-family:'Tanpearl';       src:url('./Fonts/Tan-Pearl.ttf')             format('truetype'); font-display:swap; }
-    @font-face { font-family:'Centaur';        src:url('./Fonts/VNcentaur-Regular.ttf')     format('truetype'); font-display:swap; }
-    @font-face { font-family:'Arcadian';       src:url('./Fonts/Arcadian.ttf')              format('opentype'); font-display:swap; }
-    @font-face { font-family:'Arsenica';       src:url('./Fonts/ArsenicaTrial-Regular.otf') format('opentype'); font-display:swap; }
-    @font-face { font-family:'Canela';         src:url('./Fonts/Canela-Bold.otf')           format('opentype'); font-display:swap; }
-    @font-face { font-family:'Anecor';         src:url('./Fonts/anecor-gheroos.otf')        format('opentype'); font-display:swap; }
-    @font-face { font-family:'cotoris';        src:url('./Fonts/cotoris.otf')               format('opentype'); font-weight:400; font-style:normal; font-display:swap; }
     @font-face { font-family:'cotorisi';       src:url('./Fonts/cotorisita.otf')            format('opentype'); font-weight:400; font-style:normal; font-display:swap; }
 
     /* =========================================================
@@ -164,7 +154,7 @@
 
     #cta .form-card h3{
       margin: 0 0 10px; padding: 0 0 10px; border-bottom: 1px solid var(--hair);
-      font-family: 'eyesomei'; font-size: 25px; font-weight: 400; letter-spacing:-.01em; flex:0 0 auto;
+      font-family: 'Eyesomei'; font-size: 25px; font-weight: 400; letter-spacing:-.01em; flex:0 0 auto;
     }
 
     /* Form */
@@ -1091,3 +1081,4 @@ try {
   <script src="https://www.google.com/recaptcha/api.js?render=6Lc4gs0rAAAAAI0aXXts_OCCquoEdduHM5l98EcH" async defer></script>
 
 </section>
+
